adding compass. more gems and we should use bundler...

--- a/dynamic/css/styles.sass
+++ b/dynamic/css/styles.sass
@@ -1,4 +1,9 @@
+@import "compass"
+@import "blueprint"
+
 @import url(http://reset5.googlecode.com/hg/reset.min.css)
+
++blueprint
 
 @font-face
   font-family: 'DINCondensed'
