--- a/dynamic/home.haml
+++ b/dynamic/home.haml
@@ -1,6 +1,6 @@
 layout: default.haml
 ---------------------------------------------META
-%h1 Home page
+%h1 Welcome to the Mince Pie Project
 
 %h2 The mince pie leaderboard
 %ol#top_chefs
