--- a/dynamic/css/styles.sass
+++ b/dynamic/css/styles.sass
@@ -1,30 +1,31 @@
 @import "compass"
-@import "blueprint"
-
+//@import "blueprint"
 @import url(http://reset5.googlecode.com/hg/reset.min.css)
 
-+blueprint
+//+blueprint
+
+$brown: #735300
+
+=pic-frame
+  background: white
+  padding: 10px
+  +single-box-shadow(#999, 0px, 3px, 5px)
+
+=small
+  font-family: "Adelle Bold", Georgia, serif
+  font-size: 0.8em
 
 @font-face
   font-family: 'DINCondensed'
   src: url('/fonts/17618E_0.eot')
   src: url('/fonts/17618E_0.eot?#iefix') format('embedded-opentype'), url('/fonts/17618E_0.woff') format('woff'), url('/fonts/17618E_0.ttf') format('truetype')
 
-=pie-clearfix
-  &:after
-    content: "."
-    display: block
-    height: 0
-    clear: both
-    visibility: hidden
-
 body
   margin: 0
-  background: #ffdc50 url("../images/background.png") top center no-repeat
+  background: #ffdc50 url("/images/background.png") top center no-repeat
   text-align: center
-  color: #735300
+  color: $brown
   font-family: Georgia, Palatino, serif
-  text-align: center
 
 .container
   width: 940px
@@ -36,11 +37,24 @@ body
   width: 220px
   margin-right: 20px
   float: left
-  img
+  text-align: center
+  font-style: italic
+  .logo
     margin-left: -100px
+  h3, p
+    font-weight: normal
+    margin-bottom: 1em
+    line-height: 1.5em
+    &.explanation
+      text-decoration: underline
+  h3
+    font-size: 1.25em
+  
 
 .main
-  margin-left: 80px
+  margin:
+    bottom: 3em
+    left: 80px
   width: 620px
   float: left
 
@@ -55,22 +69,93 @@ header nav ul
     float: left
     margin-right: 25px
 
+section
+  margin-top: 4em
+  +pie-clearfix
+
 h1
   font-size: 2em
   font-family: "Adelle Bold", Georgia, serif
   font-size-adjust: 0.523
   font-weight: bold
   font-style: normal
-  margin-top: 0.5em
-
-h2
+  line-height: 1.25em
+  margin-bottom: 0.75em
 
 p
-  font-style: italic
-  line-height: 1.25em
-  margin:
-    top: 1.75em
-    bottom: 1.75em
+  line-height: 1.5em
 
-.explanation
-  text-decoration: underline
+.intro
+  div
+    width: 300px
+    margin-right: 20px
+    float: left
+  img
+    width: 280px
+    float: right
+    +pic-frame
+    +rotate(3deg)
+
+.leaderboard
+  ol li
+    padding: 1.75em 0 0.5em 0
+    border-bottom: 1px dotted $brown
+    +clearfix
+    .number, .name, .bids, .price
+      float: left
+      vertical-align: middle
+    .number
+      width: 66px
+      font-family: "DINCondensed", Arial, "Helvetica Neue", "HelveticaNeue", Helvetica, sans
+      font-size: 1.5em
+      color: white
+      background: url(/images/bg_number.png) top left no-repeat
+      padding: 14px 17px
+      margin-top: -15px
+    .name
+      width: 300px
+    .bids
+      width: 120px
+    .price
+      width: 100px
+      text-align: right
+      font-weight: bold
+
+.social
+  ol
+    +clearfix
+    li
+      list-style-type: none
+      width: 270px
+      padding: 10px
+      background: $brown
+      color: white
+      float: left
+      font-size: 0.8em
+      font-family: Arial, "Helvetica Neue", "HelveticaNeue", Helvetica, sans
+      line-height: 1.5em
+      &:first-child
+        margin-right: 40px
+      a, a:visited
+        color: white
+  > p
+    +small
+    margin-top: 2em
+
+.partners
+  div
+    +pic-frame
+    width: 290px
+    padding: 40px 0
+    text-align: center
+    float: left
+    &.wemakewebsites
+      margin-right: 40px
+
+footer
+  text-align: left
+  +small
+  margin: 1em 0
+  clear: both
+  a
+    margin: 0 10px
