--- a/dynamic/index.haml
+++ b/dynamic/index.haml
@@ -1,12 +1,43 @@
 layout: default.haml
 ---------------------------------------------META
 
-.content
-  %h2 Coming soon...
-  %p.explanation An auction of mince pies baked by some of the UK’s best known chefs
-  %p
-    %small In support of
-  %p
-    %a(href="http://www.actionagainsthunger.org/")
-      %img(src="images/aah.png")
+%section.intro
+  %div
+    %h1 Welcome to the Mince Pie Project
+    %p Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
+  %img(src="/images/mincepie.jpg")
 
+%section.leaderboard
+  %h1 The Mince Pie Leaderboard
+  %ol#top_chefs
+
+%section.social
+  %h1 On Twitter
+  %ol#twitter_update_list
+  %script(type="text/javascript" src="http://twitter.com/javascripts/blogger.js")
+  %script(type="text/javascript" src="http://twitter.com/statuses/user_timeline/mincepieproject.json?callback=twitterCallback2&count=2")
+  %p
+    %a(src="http://twitter.com/mincepieproject") Follow @mincepieproject on Twitter
+/
+/  %h2 Blog
+/  %script(type="text/javascript" src="http://kloliteratur.tumblr.com/js")
+/
+
+%section.partners
+  %h1 Partners
+  %div.wemakewebsites
+    %img(src="/images/wemakewebsites.png")
+  %div
+    %img(src="/images/mindmatters.png")
+
+:javascript
+  var i,j = 0;
+  for (i in auctions) {
+    apiCall += "\&ItemID("+ j++ +")="+i;
+  }
+  (function() {
+    var e = document.createElement("script");
+    e.type = 'text/javascript'; e.async = true; e.src = apiCall;
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(e, s);
+  })();
