--- a/layouts/default.haml
+++ b/layouts/default.haml
@@ -24,6 +24,9 @@
       %p
         %a(href="http://www.actionagainsthunger.org/")
           %img(src="images/aah.png")
+      %p.sharing
+        <span class='st_facebook_hcount' displayText='Facebook'></span><span  class='st_twitter_hcount' displayText='Tweet'></span>
+        <script type="text/javascript">var switchTo5x=true;</script><script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script><script type="text/javascript">stLight.options({publisher:'f9c84a94-7638-45f3-b3be-dbf6ae4aaf23'});</script>
     .main
       %header
         %nav
