--- a/dynamic/css/styles.sass
+++ b/dynamic/css/styles.sass
@@ -6,13 +6,16 @@
 
 $brown: #735300
 
-=pic-frame
+=pic-frame($padding)
   background: white
-  padding: 10px
+  padding: $padding
   +single-box-shadow(#999, 0px, 3px, 5px)
 
-=small
+=adelle
   font-family: "Adelle Bold", Georgia, serif
+
+=small
+  +adelle
   font-size: 0.8em
 
 @font-face
@@ -49,7 +52,8 @@ body
       text-decoration: underline
   h3
     font-size: 1.25em
-  
+  .sharing
+    margin-top: 3em
 
 .main
   margin:
@@ -93,33 +97,48 @@ p
   img
     width: 280px
     float: right
-    +pic-frame
+    +pic-frame(10px)
     +rotate(3deg)
 
 .leaderboard
   ol li
-    padding: 1.75em 0 0.5em 0
+    padding: 2.75em 0 1em 0
     border-bottom: 1px dotted $brown
     +clearfix
-    .number, .name, .bids, .price
+    .number, .name, img, .bids, .price
       float: left
       vertical-align: middle
     .number
-      width: 66px
+      width: 26px
       font-family: "DINCondensed", Arial, "Helvetica Neue", "HelveticaNeue", Helvetica, sans
       font-size: 1.5em
       color: white
       background: url(/images/bg_number.png) top left no-repeat
       padding: 14px 17px
       margin-top: -15px
+    img
+      width: 70px
+      margin:
+        top: -30px
+        right: 20px
+      +pic-frame(5px)
     .name
-      width: 300px
+      width: 180px
     .bids
-      width: 120px
+      width: 50px
+      padding-right: 40px
     .price
-      width: 100px
+      width: 80px
+      padding-right: 40px
       text-align: right
       font-weight: bold
+    .button
+      padding: 7px 20px
+      background: lighten($brown, 5)
+      color: white
+      font-weight: bold
+      +border-radius(5px)
+      +adelle
 
 .social
   ol
@@ -127,8 +146,8 @@ p
     li
       list-style-type: none
       width: 270px
-      padding: 10px
-      background: $brown
+      padding: 10px 10px 22px 10px
+      background: $brown url(/images/nose.png) bottom left no-repeat
       color: white
       float: left
       font-size: 0.8em
@@ -140,11 +159,13 @@ p
         color: white
   > p
     +small
-    margin-top: 2em
+    margin-top: 1.5em
+    a
+      text-decoration: underline
 
 .partners
   div
-    +pic-frame
+    +pic-frame(10px)
     width: 290px
     padding: 40px 0
     text-align: center
