--- a/dynamic/css/styles.sass
+++ b/dynamic/css/styles.sass
@@ -73,6 +73,12 @@ header nav ul
     float: left
     margin-right: 25px
 
+nav a, nav a:visited
+  color: $brown
+  text-decoration: none
+  &:hover, &.active
+    text-decoration: underline
+
 section
   margin-top: 4em
   +pie-clearfix
