--- a/layouts/default.haml
+++ b/layouts/default.haml
@@ -51,7 +51,7 @@
         %nav
           %a(href="/about.html") About
           |
-          %a(href="/toc.html") Terms &amp; Conditions
+          %a(href="/tc.html") Terms &amp; Conditions
           |
           %a(href="/contact.html") Contact
 
