added initial copy edits and large chef pngs

--- a/dynamic/charities.haml
+++ b/dynamic/charities.haml
@@ -4,12 +4,31 @@ active: charities
 
 %section.charities
   %h1 Charities
-  %p Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
+  %p
+    Every penny of the money raised from The Mince Pie Project will be donated equally between The Jamie Oliver Foundation and Action Against Hunger.
   %div.charity
     %h3
-      %span.name Action Against Hunger 
-    %img(src="/images/aah_color.png")
-    %p Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
-    %p Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+      %span.name The Jamie Oliver Foundation
+    %img(src="/images/jof_color.gif")
     %p
-      %a(href="http://www.actionagainsthunger.org/") www.actionagainsthunger.org
+      The Jamie Oliver Foundation is a registered charity (number 1094536) whose mission is to empower, educate and engage as many people as possible to love and enjoy good food.
+    %p
+      The charity funds the Fifteen Apprentice Programme, which takes on unemployed and under-qualified young people from the local area in each of the three Fifteen Restaurants (London, Amsterdam and Cornwall) and trains them to become qualified chefs.  Since 2002, more than 220 young people have graduated across all the restaurants, with some of them now running their own restaurants, starring on TV or working in top-class kitchens from London to New York to Sydney.
+    %p
+      Tony Phillips, one of the current Fifteen London Apprentices, is making a batch of mince pies for the auction.
+    %p
+      %a(href="http://www.jamieoliver.com/foundation/") http://www.jamieoliver.com/foundation
+    %br
+
+  %div.charity
+    %h3
+      %span.name Action Against Hunger
+    %img(src="/images/aah_color.png")
+    %p
+      Founded 30 years ago, ACF International (Action Against Hunger) is an international humanitarian organisation committed to ending child hunger. Recognised as a leader in the fight against malnutrition, they save the lives of malnourished children while providing communities with access to safe water and sustainable solutions to hunger.
+    %p
+      With 30 years of expertise in emergency situations of conflict, natural disaster and chronic food insecurity, Action Against Hunger runs life-saving programmes in over 40 countries benefitting five million people each year.
+    %p
+      Their vision is of a world without hunger. A world in which all children and adults have sufficient food and water, equitable access to the resources that sustain life, and are able to attain these with dignity.
+    %p
+      %a(href="http://www.actionagainsthunger.org.uk/") http://www.actionagainsthunger.org.uk
