--- a/dynamic/css/styles.sass
+++ b/dynamic/css/styles.sass
@@ -113,7 +113,7 @@ a.button
   width: 620px
   float: left
 
-header nav ul  
+header nav ul
   font-size: 1.67em
   text-transform: uppercase
   font-family: "DINCondensed"
@@ -221,6 +221,9 @@ nav a, nav a:visited
     +pic-frame(10px)
     float: left
     margin-right: 20px
+  h2 em
+    font-size: 0.8em
+
 
 .charity
   margin-top: 1.5em
