--- a/dynamic/contact.haml
+++ b/dynamic/contact.haml
@@ -4,10 +4,9 @@ active: contact
 
 %section.contact
   %h1 Contact us
-  %p Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
   %p
-    %strong Email:
-    %a(href="mailto:") mail@domain.com
-  %p
-    %strong Phone:
-    0044 555 12345
+    If you have any questions or suggestions about the project or would like to get involved,
+    we’d love to hear from you.  Please email us at
+    %a(href="mailto:info@themincepieproject.com") info@themincepieproject.com
+    , or follow us on twitter
+    %a(href="http://twitter.com/mincepieproject") @mincepieproject
