--- a/dynamic/partners.haml
+++ b/dynamic/partners.haml
@@ -4,6 +4,30 @@ active: partners
 
 %section.partners
   %h1 Partners
-  %p Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
+  %p
+    We’re incredibly grateful to the following companies for helping with the project. All the companies involved have
+    generously donated a significant amount of their services or products entirely free of charge, often at very short
+    notice.  Without them, quite simply the project would not have been able to happen, so many thanks to them all and
+    we wholeheartedly recommend you consider working with them!
+
   = render_partial "partners"
-  %p Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
+  %p
+    Particular personal thanks should go to Justin Moore (City Sprint), Casey Childs and Charlie Eland (Cooke & Brand PR),
+    Christoph Sassenberg & Wolfgang Wopperer (Mindmatters), Piers Thorogood & Alex O’Byrne (We Make Websites),
+    Derek Hardy (Naked Wines) and Adrienne Katz (Divertimenti).
+  %p
+    In addition, we’ve been lucky to have a lot of informal support from a number of people.  Thanks to
+    %a(href="http://www.twelvepointfivepercent.com") Hugh Wright
+    ,
+    %a(href="http://mindmatters.co.uk") Florian Siepert
+    ,
+    %a(href="http://www.mistertruffle.com") Hugo Pickford-Wardle
+    (AKA Mister Truffle) and
+    %a(href="http://www.pinchofsaltlondon.com") Katy Salter
+    for all their tweeting and support in the food blogging community. In the PR world, thanks should go to
+    Ginny Corfield at MyJam Communications, Emma Murray at Pink Gorilla PR, Claire Tortise and all the PR firms that
+    represent the chefs involved.  Thanks should also go to Agnes Norbury, for acting as The Mince Pie Project official
+    photographer.
+  %p
+    Finally, thanks to all the chefs and their restaurant teams who are donating mince pies and PR time to the project
+    over the busy Christmas period!
