added thumbs and sponsor images w/ links

--- a/dynamic/_partners.haml
+++ b/dynamic/_partners.haml
@@ -1,6 +1,19 @@
-%div.wemakewebsites
-  %a(href="http://wemakewebsites.com")
-    %img(src="/images/wemakewebsites.png")
+%div.citysprint
+  %a(href="http://www.citysprint.co.uk")
+    %img(src="/images/sponsors/citysprint.png")
+%div.cookeandbrand
+  %a(href="http://www.cookeandbrandpr.co.uk")
+    %img(src="/images/sponsors/cookeandbrand.png")
 %div.mindmatters
   %a(href="http://mindmatters.co.uk")
-    %img(src="/images/mindmatters.png")
+    %img(src="/images/sponsors/mindmatters.png")
+%div.wemakewebsites
+  %a(href="http://wemakewebsites.com")
+    %img(src="/images/sponsors/wemakewebsites.png")
+%div.nakedwines
+  %a(href="http://www.nakedwines.com")
+    %img(src="/images/sponsors/nakedwines.png")
+%div.divertimenti
+  %a(href="http://www.divertimenti.co.uk")
+    %img(src="/images/sponsors/divertimenti.png")
+
