--- a/dynamic/about.haml
+++ b/dynamic/about.haml
@@ -14,7 +14,9 @@ active: about
   %p
     The auction opens at 9am on Friday 9th December, and closes at 6pm on Friday 16th December.  All the action can be followed by going to ‘The Auction’ tab, where you place your bid.
   %p
-    Each batch of 50 mince pies will be cooked fresh and same-day couriered directly to the winning bidder by City Sprint (LINK TO www.citysprint.co.uk), on the 22nd of December.
+    Each batch of 50 mince pies will be cooked fresh and same-day couriered directly to the winning bidder by
+    %a(href="http://www.citysprint.co.uk") City Sprint
+    , on the 22nd of December.
   %p
     The project was conceived just 6 weeks ago by 23yr old Pete Butler.  Having recently left his job in the City, the idea randomly came to him during a particularly boring session in the gym.  He’s currently working on an exciting food project, launching early 2012.
   %p
