--- a/dynamic/index.haml
+++ b/dynamic/index.haml
@@ -28,8 +28,4 @@ active: home
 
 %section.partners
   %h1 Partners
-  %div.wemakewebsites
-    %img(src="/images/wemakewebsites.png")
-  %div
-    %img(src="/images/mindmatters.png")
-
+  = render_partial("partners")
