--- a/dynamic/css/styles.sass
+++ b/dynamic/css/styles.sass
@@ -79,6 +79,7 @@ a.button
   +border-radius(5px)
   +adelle
 
+
 .container
   width: 940px
   margin: 0 auto
@@ -200,11 +201,13 @@ nav a, nav a:visited
   div
     +pic-frame(10px)
     width: 290px
-    padding: 40px 0
+    padding: 0 0
     text-align: center
     float: left
-    &.wemakewebsites
+    &.mindmatters, &.citysprint, &.nakedwines
       margin-right: 40px
+    &.mindmatters, &.wemakewebsites
+      padding: 13px 0
   h1 + p, div + div
     margin-bottom: 2em
   div + p
