auctions, pretty shitty js, now with sorting.

--- a/dynamic/_auctions.haml
+++ b/dynamic/_auctions.haml
@@ -1,12 +1,4 @@
 %ol#top_chefs
-  :javascript
-    var i,j = 0;
-    for (i in auctions) {
-      apiCall += "\&ItemID("+ j++ +")="+i;
-    }
-    (function() {
-      var e = document.createElement("script");
-      e.type = 'text/javascript'; e.async = true; e.src = apiCall;
-      var s = document.getElementsByTagName('script')[0];
-      s.parentNode.insertBefore(e, s);
-    })();
+:javascript
+  getAuctions(auctions1, apiCall1);
+  getAuctions(auctions2, apiCall2);
