--- a/dynamic/auction.haml
+++ b/dynamic/auction.haml
@@ -4,8 +4,8 @@ active: auction
 
 %section.auction
   %h1 The Auction
-  %p Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
-  
+  %p The auction opens at 9am on the 9th December, and closes at 6pm on the 16th December. See below for the latest top-bid, and click on the links to make your own bid.
+
 %section.leaderboard
   %h2 Highest Bids so far…
   = render_partial "auctions"
