--- a/dynamic/css/styles.sass
+++ b/dynamic/css/styles.sass
@@ -155,7 +155,8 @@ nav a, nav a:visited
       font-size: 1.5em
       color: white
       background: url(/images/bg_number.png) top left no-repeat
-      padding: 14px 17px
+      padding: 13px 20px 13px 10px
+      text-align: center
       margin-top: -15px
     img
       width: 70px
@@ -164,10 +165,11 @@ nav a, nav a:visited
         right: 20px
       +pic-frame(5px)
     .name
-      width: 180px
+      width: 150px
     .bids
-      width: 50px
+      width: 80px
       padding-right: 40px
+      text-align: right
     .price
       width: 80px
       padding-right: 40px
