--- a/layouts/default.haml
+++ b/layouts/default.haml
@@ -6,6 +6,8 @@
   %title The Mince Pie Project
   %link(href='/css/styles.css' rel='stylesheet' type='text/css')
   %link(href="http://f.fontdeck.com/s/css/l4MsFun30OJhB9DTDGcb8JQSAOQ/localhost/13236.css" rel="stylesheet" type="text/css")
+  %link(href="http://f.fontdeck.com/s/css/l4MsFun30OJhB9DTDGcb8JQSAOQ/themincepieproject.com/13236.css" rel="stylesheet" type="text/css")
+  %link(href="http://f.fontdeck.com/s/css/l4MsFun30OJhB9DTDGcb8JQSAOQ/www.themincepieproject.com/13236.css" rel="stylesheet" type="text/css")
   %script(src='/js/ebay-auctions.js')
 
   /[if lt IE 9]
