styling und copy fixes

--- a/dynamic/auction.haml
+++ b/dynamic/auction.haml
@@ -4,8 +4,10 @@ active: auction
 
 %section.auction
   %h1 The Auction
-  %p Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
+  %p
+    The Mince Pie Project has got together 35 of the UK’s best chefs to each cook an exclusive batch of 50 mince pies.
+    We’re auctioning off each batch, raising money for Action Against Hunger and The Jamie Oliver Foundation.
   
 %section.leaderboard
-  %h2 Highest Bids so far…
+  %h2 The Mince Pie Leaderboard
   = render_partial "auctions"
