--- a/dynamic/partners.haml
+++ b/dynamic/partners.haml
@@ -13,7 +13,7 @@ active: partners
   = render_partial "partners"
   %p
     Particular personal thanks should go to Justin Moore (City Sprint), Casey Childs and Charlie Eland (Cooke & Brand PR),
-    Christoph Sassenberg & Wolfgang Wopperer (Mindmatters), Piers Thorogood & Alex O’Byrne (We Make Websites),
+    Christoph Sassenberg & Wolfgang Wopperer (mindmatters), Piers Thorogood & Alex O’Byrne (We Make Websites),
     Derek Hardy (Naked Wines) and Adrienne Katz (Divertimenti).
   %p
     In addition, we’ve been lucky to have a lot of informal support from a number of people.  Thanks to
