--- a/layouts/default.haml
+++ b/layouts/default.haml
@@ -9,10 +9,18 @@
   %link(href="http://f.fontdeck.com/s/css/l4MsFun30OJhB9DTDGcb8JQSAOQ/themincepieproject.com/13236.css" rel="stylesheet" type="text/css")
   %link(href="http://f.fontdeck.com/s/css/l4MsFun30OJhB9DTDGcb8JQSAOQ/www.themincepieproject.com/13236.css" rel="stylesheet" type="text/css")
   %script(src='/js/ebay-auctions.js')
-
   /[if lt IE 9]
     %script(src='http://html5shim.googlecode.com/svn/trunk/html5.js')
     %link(href='/css/ie.css' media='screen' rel='stylesheet' type='text/css')
+  :javascript
+    var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-27488826-1']);
+      _gaq.push(['_trackPageview']);
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
 
 %body    
   .container
