adding reduced top list for index page.

--- a/dynamic/chefs.haml
+++ b/dynamic/chefs.haml
@@ -18,5 +18,5 @@ active: chefs
           %em= args[1]
         %p= args[2]
         %p
-          %a.button Bid
+          %a.button(href="#{args[3]}") Bid
 
