--- a/dynamic/index.haml
+++ b/dynamic/index.haml
@@ -12,6 +12,7 @@ active: home
 
 %section.leaderboard
   %h1 The Mince Pie Leaderboard
+  %ol#top_chefs(data-count="5")
   = render_partial "auctions"
 
 %section.social
