more styling fixes and message for inactive bidding

--- a/dynamic/auction.haml
+++ b/dynamic/auction.haml
@@ -13,5 +13,5 @@ active: auction
 
 %section.leaderboard
   %h2 The Mince Pie Leaderboard
-  %ol#top_chefs
+  %ol#top_chefs.inactive
   = render_partial "auctions"
