--- a/dynamic/index.haml
+++ b/dynamic/index.haml
@@ -12,15 +12,17 @@ active: home
 
 %section.leaderboard
   %h1 The Mince Pie Leaderboard
-  %ol#top_chefs(data-count="5")
+  %ol#top_chefs.inactive(data-count="5")
   = render_partial "auctions"
+  %p.more
+    %a(href="/auction.html") > All Auctions
 
 %section.social
   %h1 On Twitter
   %ol#twitter_update_list
   %script(type="text/javascript" src="http://twitter.com/javascripts/blogger.js")
   %script(type="text/javascript" src="http://twitter.com/statuses/user_timeline/mincepieproject.json?callback=twitterCallback2&count=2")
-  %p
+  %p.more
     %a(href="http://twitter.com/mincepieproject") Follow @mincepieproject on Twitter
 /
 /  %h2 Blog
