added stevie parle, updated chef copies and added link to blog

--- a/layouts/default.haml
+++ b/layouts/default.haml
@@ -22,7 +22,7 @@
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
       })();
 
-%body    
+%body
   .container
     .sidebar
       %a(href="/")
@@ -52,7 +52,7 @@
             %li
               %a(href="/auction.html" class="#{active == 'auction' ? 'active' : ''}") The Auction
             %li
-              %a(href="/") Blog
+              %a(href="http://blog.themincepieproject.com") Blog
             %li
               %a(href="/partners.html" class="#{active == 'partners' ? 'active' : ''}") Partners
             %li
