36 chefs now. removed link to obsolete js file

--- a/dynamic/chefs.haml
+++ b/dynamic/chefs.haml
@@ -5,7 +5,7 @@ active: chefs
 %section
   %h1 The Chefs
   %p
-    We’ve lined up 35 of the UK’s best chefs to each cook 50 exclusive mince pies for The Mince Pie Project.
+    We’ve lined up 36 of the UK’s best chefs to each cook 50 exclusive mince pies for The Mince Pie Project.
     See below for the names and descriptions chefs involved and click on the links to make a bid for their batch of 50 pies.
 
   %ul.chefs
@@ -18,5 +18,5 @@ active: chefs
           %em= args[1]
         %p= args[2]
         %p
-          %a.button(href="#{args[3]}") Bid
+          %a.button(href="#{args[3]}" onclick="javascript: alert('Bidding starts 9 a.m. on December 9th')") Bid
 
