adding cufon font needed for the tumblelog

--- a/dynamic/contact.haml
+++ b/dynamic/contact.haml
@@ -6,7 +6,8 @@ active: contact
   %h1 Contact us
   %p
     If you have any questions or suggestions about the project or would like to get involved,
-    we’d love to hear from you.  Please email us at
+    we’d love to hear from you.
+    Please email us at
     %a(href="mailto:info@themincepieproject.com") info@themincepieproject.com
-    , or follow us on twitter
+    or follow us on twitter
     %a(href="http://twitter.com/mincepieproject") @mincepieproject
