--- a/layouts/default.haml
+++ b/layouts/default.haml
@@ -64,7 +64,9 @@
         %nav
           %a(href="/about.html") About
           |
-          %a(href="/tc.html") Terms &amp; Conditions
-          |
+          /%a(href="/tc.html") Terms &amp; Conditions
+          /|
           %a(href="/contact.html") Contact
+          |
+          %a(href="http://www.flickr.com/photos/adactio/2134826552/") Mince Pie photo by adactio
 
