last minute changes. meh.

--- a/dynamic/about.haml
+++ b/dynamic/about.haml
@@ -22,5 +22,5 @@ active: about
   %p
     If you want to get in touch with Pete you can contact him on
     %a(href="mailto:pete@themincepieproject.com") pete@themincepieproject.com
-    or follow Peter follow his personal twitter
+    or follow his personal twitter
     %a(href="http://twitter.com/peternbutler") @peternbutler
