--- a/dynamic/chefs.haml
+++ b/dynamic/chefs.haml
@@ -18,5 +18,5 @@ active: chefs
           %em= args[1]
         %p= args[2]
         %p
-          %a.button(href="#{args[3]}" onclick="javascript: alert('Bidding starts 9 a.m. on December 9th')") Bid
+          %a.button(href="#{args[3]}") Bid
 
