--- a/dynamic/index.haml
+++ b/dynamic/index.haml
@@ -12,7 +12,7 @@ active: home
 
 %section.leaderboard
   %h1 The Mince Pie Leaderboard
-  %ol#top_chefs.inactive(data-count="5")
+  %ol#top_chefs(data-count="5")
   = render_partial "auctions"
   %p.more
     %a(href="/auction.html") > All Auctions
