--- a/layouts/default.haml
+++ b/layouts/default.haml
@@ -1,4 +1,33 @@
 !!! 5
+:plain
+  <!--
+
+                             *
+                            /.\
+                           /..'\
+                           /'.'\
+                          /.''.'\
+                          /.'.'.\
+                   "'""""/'.''.'.\""'"'"
+                         ^^^[_]^^^
+
+
+
+    Welcome to the source code of The Mince Pie Project!
+    ----------------------------------------------------
+
+    This site was generated using "frank". If you are interested how this was done, go and have a look on
+
+                          http://github.com/defsprite/themincepieproject.com
+
+    If you have any questions, feel free to contact @defsprite on twitter.
+
+    Merry Christmas & Happy Coding!
+
+
+
+
+  -->
 %head
   %meta(content='text/html; charset=UTF-8' http-equiv='Content-Type')
   %meta(content='en-en' http-equiv='Content-Language')
@@ -31,7 +60,7 @@
         Starts 9th December.
       %p In support of
       %p.aah
-        %a(href="http://www.actionagainsthunger.org/")
+        %a(href="http://www.actionagainsthunger.co.uk/")
           %img(src="images/aah.png")
       %p.jof
         %a(href="http://www.jamieoliver.com/foundation/")
