--- a/dynamic/auction.haml
+++ b/dynamic/auction.haml
@@ -13,5 +13,6 @@ active: auction
 
 %section.leaderboard
   %h2 The Mince Pie Leaderboard
+  %p#total
   %ol#top_chefs
   = render_partial "auctions"
