--- a/dynamic/contact.haml
+++ b/dynamic/contact.haml
@@ -8,6 +8,6 @@ active: contact
     If you have any questions or suggestions about the project or would like to get involved,
     we’d love to hear from you.
     Please email us at
-    %a(href="mailto:info@themincepieproject.com") info@themincepieproject.com
+    %a(href="mailto:pete@themincepieproject.com") pete@themincepieproject.com
     or follow us on twitter
     %a(href="http://twitter.com/mincepieproject") @mincepieproject
