--- a/dynamic/about.haml
+++ b/dynamic/about.haml
@@ -12,7 +12,7 @@ active: about
   %p
     Many of the chefs have their own unique take on the humble mince pie.  From Nigel Haworth’s melt-in-your-mouth Swiss pastry, to Ashley Palmer-Watts deep-fried version.
   %p
-    The auction opens at 9am on Friday 9th December, and closes at 6pm on Friday 16th December.  All the action can be followed by going to ‘The Auction’ tab, where you place your bid.
+    The auction opens at 9am on Friday 9th December, and closes at 12 noon on Friday 16th December.  All the action can be followed by going to ‘The Auction’ tab, where you place your bid.
   %p
     Each batch of 50 mince pies will be cooked fresh and same-day couriered directly to the winning bidder by
     %a(href="http://www.citysprint.co.uk") City Sprint
