--- a/dynamic/auction.haml
+++ b/dynamic/auction.haml
@@ -8,7 +8,7 @@ active: auction
     The Mince Pie Project has got together 36 of the UK’s best chefs to each cook an exclusive batch of 50 mince pies.
     We’re auctioning off each batch, raising money for Action Against Hunger and The Jamie Oliver Foundation.
   %p
-    The auction opens at 9am on the 9th December, and closes at 6pm on the 16th December. See below for the latest
+    The auction opens at 9am on the 9th December, and closes at 12 noon on the 16th December. See below for the latest
     top-bid, and click on the links to make your own bid.
 
 %section.leaderboard
