--- a/dynamic/css/styles.sass
+++ b/dynamic/css/styles.sass
@@ -89,7 +89,7 @@ a.button
   background: $brown
   color: white
   font-weight: bold
-  text-decoration: none
+  text-decoration: line-through
   +border-radius(5px)
   +adelle
   +pie-behaviour
