--- a/layouts/default.haml
+++ b/layouts/default.haml
@@ -57,7 +57,7 @@
       %h3.explanation
         A Mince Pie Auction.
         %br
-        Starts 9th December.
+        Closes at noon, 16th December.
       %p In support of
       %p.aah
         %a(href="http://www.actionagainsthunger.co.uk/")
