--- a/dynamic/chefs.haml
+++ b/dynamic/chefs.haml
@@ -6,8 +6,7 @@ active: chefs
   %h1 The Chefs
   %p
     We’ve lined up 36 of the UK’s best chefs to each cook 50 exclusive mince pies for The Mince Pie Project.
-    See below for the names and descriptions chefs involved and click on the links to make a bid for their batch of 50 pies.
-
+    See below for the names and descriptions chefs involved.
   %ul.chefs
 
     - CHEFS.each_slice(6) do |args|
@@ -18,5 +17,5 @@ active: chefs
           %em= args[1]
         %p= args[2]
         %p
-          %a.button(href="#{args[3]}") Bid
+          %a.button(href="#{args[3]}" onclick="javascript:alert('Sorry, the auction has ended.'); return false") Bid
 
